<resources>
    <string name="app_name">CPC-Delicious</string>
    <string name="title_activity_main_home">CPC-Delicious</string>
    <string name="navigation_drawer_open">CPC-Delicious</string>
    <string name="navigation_drawer_close">CPC-Delicious</string>
    <string name="nav_header_title">CPC-Delicious</string>
    <string name="nav_header_subtitle">CPC-Delicious</string>
    <string name="nav_header_desc">CPC-Delicious</string>
    <string name="action_settings">CPC-Delicious</string>
    <string name="input_pass">Nhập Mật Khẩu</string>
    <string name="note_register">Vui lòng đăng ký với email mà bạn sử dụng để xác nhận và tránh các sự cố về tài khoản!</string>
    <string name="backtologin">Quay Lại</string>
    <string name="register_account">Đăng Ký Tài Khoản</string>
    <string name="lostpass">Mất Mật Khẩu?</string>
    <string name="input_email">Nhập Email</string>
    <string name="login_title">Đăng Nhập</string>
    <string name="fblogin">Đăng Nhập FaceBook</string>
    <string name="register_new">Đăng Ký Mới</string>
    <string name="input_email_register">Nhập Email Đăng Ký</string>
    <string name="retype_password">Nhập Lại Mật Khẩu</string>
    <string name="facebook_app_id">406841093244756</string>
    <string name="fb_login_protocol_scheme">fb406841093244756</string>
    <string name="checkbox">Ghi Nhớ Email Và Mật Khẩu</string>
    <string name="note_resetpass">Vui Lòng Nhập Email Để Gửi Mật Khẩu Đăng Nhập!</string>
    <string name="resetpass_title">Đặt Lại Mật Khẩu</string>
    <string name="note_info">Vui Lòng Nhập Thông Tin Yêu Cầu</string>
    <string name="input_ngaysinh">Nhập Ngày Sinh</string>
    <string name="input_sdt">Nhập Số Điện Thoai</string>
    <string name="input_ten">Nhập Họ Và Tên</string>
    <string name="save">Lưu Lại</string>
    <string name="note_save">Vui Lòng Nhập Thông Tin Để App Có Thể Hỗ Trợ Tốt Hơn!</string>
    <string name="skip">Bỏ Qua</string>
    <string name="danhgia">Đánh Giá Và Nhận Xét</string>
</resources>
