<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroud6"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_tt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:minHeight="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:titleMarginTop="15dp" />
    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
            android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true">
    <EditText
        android:id="@+id/edt_nhapten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_content"
        android:hint="@string/input_ten"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        />

    <EditText
        android:id="@+id/edt_sdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginTop="@dimen/padding_content"
        android:hint="@string/input_sdt"
        android:singleLine="true"
        android:textSize="@dimen/normal_text"
        />
        <TextView
         android:id="@+id/tv_namsinh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
         android:hint="@string/input_ngaysinh"
          android:singleLine="true"
         android:textSize="@dimen/normal_text" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:id="@+id/rdb_group">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Giới Tính"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="30dp"
                        android:text="Nam"
                        android:id="@+id/rdb_nam"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdb_nu"
                        android:checked="false"
                        android:text="Nữ"/>
                </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_save"
                android:textColor="@color/text_color"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/txt_14sp" />


             <Button
                 android:id="@+id/btn_save_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_content"
                 android:background="@drawable/gradient"
                 android:text="@string/save"
                 android:textColor="@color/white" />




</LinearLayout>
</RelativeLayout>